# co-evolution-lab

./: .gitignore  Blog Post Draft.md  README.md  ROADMAP.md  pyproject.toml
notebooks/: CODING_PRINCIPLES.md  exploration.ipynb
scripts/: make_figures.py  run_baseline.py  run_variants.py
src/coevolution/: config.py  diagnostics.py  judge.py  policy.py  train.py  utils.py  world.py
tests/: test_diagnostics.py  test_judge.py  test_policy.py  test_train.py  test_world.py
