[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "coevolution"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jax[cpu]>=0.4.25",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
